--- a/views/teacher/TeacherProject/2_PointofSalesSystem.ejs
+++ b/views/teacher/TeacherProject/2_PointofSalesSystem.ejs
@@ -91,7 +91,7 @@
             <div>
                 <div style="display: flex;">
                     <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Click to go to Draw.io</a>
-                    <a class="compiler btn" href="https://www.programiz.com/c-programming/online-compiler/" target="_blank">Click to go to Draw.io</a>
+                    <a class="compiler btn" href="https://www.programiz.com/c-programming/online-compiler/" target="_blank">Click to go to Programiz</a>
                 </div>
                 <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="600px" height="740px"></iframe> 
             </div>
