--- a/views/teacher/TeacherProject/3_ProjectQUIZ3.ejs
+++ b/views/teacher/TeacherProject/3_ProjectQUIZ3.ejs
@@ -75,7 +75,7 @@
        <ol class="breadcrumb">
         <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
         <li class="breadcrumb-item active" aria-current="page"><a class="a" href="/TeacherCourse">TeacherCourse</a></li>
-        <li class="breadcrumb-item active" aria-current="page"><a class="a" href="/TeacherCourse-Project_QUIZ3">Project QUIZ #3</a></li>
+        <li class="breadcrumb-item active" aria-current="page"><a class="a" href="/TeacherCourse-Project_QUIZ3">Stock Management System</a></li>
     </ol> <br>
        <p>ให้ซื่อสัตย์ในการทำข้อสอบ
         Project QUIZ #3 ในวิชา CE213 2/2566 <br>
