--- a/views/teacher/TeacherProject/3_ProjectQUIZ3.ejs
+++ b/views/teacher/TeacherProject/3_ProjectQUIZ3.ejs
@@ -71,7 +71,7 @@
     <div id = "content" class="container">
 <form action="/project-Project_QUIZ3/submit" method="post" autocomplete="off" > 
        <%# LV4 %>                
-       <h2>Project QUIZ #3</h2> 
+       <h2>Stock Management System</h2> 
        <ol class="breadcrumb">
         <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
         <li class="breadcrumb-item active" aria-current="page"><a class="a" href="/TeacherCourse">TeacherCourse</a></li>
