--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -15,7 +15,7 @@
                     <% if(RecommendaResult[0].RecommendCourse === "Algorithms and Flowcharts"){ %> <%# Output จาก Recommend มาเทียบ %> 
                         <h2>บทที่ 1 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre1done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i>Algorithms and Flowcharts</button>     
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -25,7 +25,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Datatype and Variable"){ %>
                         <h2>บทที่ 2 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre2done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Datatype and Variable</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -36,7 +36,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Input and Output"){ %>
                         <h2>บทที่ 3 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre3done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Input_and_Output'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Input and Output</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -46,7 +46,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Operators and Expressions"){ %>
                         <h2>บทที่ 4 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre4done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Operators_and_Expressions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Operators and Expressions</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -56,7 +56,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statements"){ %>
                         <h2>บทที่ 5 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre5done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Selection Statements</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -66,7 +66,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statements"){ %>
                         <h2>บทที่ 6 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre6done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Loop Statements</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -76,7 +76,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Arrays and Strings"){ %>
                         <h2>บทที่ 7 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre7done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Arrays_and_Strings'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Arrays and Strings</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
@@ -86,7 +86,7 @@
                     <% }else if(RecommendaResult[0].RecommendCourse === "Functions"){ %>
                         <h2>บทที่ 8 <%= RecommendaResult[0].RecommendCourse %></h2>
                         <% if(pre8done >= 1 ){ %>
-                                <p>ด้าน Knowledge, Tracing และ Explaining ของ post-test จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
+                                <p>ด้าน Knowledge, Tracing และ Explaining ของแบบทดสอบหลังเรียน จะต้องได้อย่างน้อย 3 คะแนน จึงจะแนะนำบทเรียนถัดไป</p> <br>
                                 <button onclick="window.location.href='/course-Functions'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i>Functions</button>
                         <% } else{ %> 
                                 <p>แบบฝึกหัดก่อนเรียน</p>
