--- a/views/community.ejs
+++ b/views/community.ejs
@@ -1,5 +1,5 @@
 <%- include('layouts/header') %>
-
+<title>Community Board</title>
 <div class="container mt-5">
     <!-- Header Section -->
     <div class="mb-4">
