--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -104,7 +104,7 @@
         <div  class="group2">
             <div>
                 <h4 class="chakra-petch-regular">Progress</h4>  
-                แบบฝึกหัดที่นักเรียนทำไปแล้ว (ชี้เพื่อดูว่าแต่ละบททำไปแล้วกี่ครั้ง)
+                แบบฝึกหัดที่ผู้เรียนทำไปแล้ว (ชี้เพื่อดูว่าแต่ละบททำไปแล้วกี่ครั้ง)
                 <div><!-- pretest progress-->
                     Pre-test 
                     <% if (pretest_progress === 0) { %>
