--- a/views/teacher/TeacherCourse.ejs
+++ b/views/teacher/TeacherCourse.ejs
@@ -60,7 +60,7 @@
             padding: 10px;
             border-radius: 10px;
         }
-        @media (max-width: 1500px) {
+        @media (max-width: 1200px) {
             .grid2,.grid3 {display: block;}
             .link{width: auto;}
             html {height: fit-content;}
@@ -73,7 +73,7 @@
 <body style="background-color: #cad19f;">
 <br><br><br>
 <div id = "content" class="container">
-    <h3>Checking</h3>
+    <h3>ตรวจคะแนน</h3>
     <div class="box">
         <a href="/check"><p class="link">แบบทดสอบก่อนเรียน-หลังเรียน</p></a>
         <a href="/checkQuiz"><p class="link">Project Quiz</p></a>
