--- a/views/teacher/TeacherCourse/3_Input_and_Output-course.ejs
+++ b/views/teacher/TeacherCourse/3_Input_and_Output-course.ejs
@@ -1086,7 +1086,7 @@
                     <div class="gamecontent-W">
                         <h5>1.ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>    
                         <iframe src="https://drive.google.com/file/d/1HdpXWDBMAyG0spJwPtGLvrvkL1NNJAXf/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1104,7 +1104,7 @@
                     <div class="gamecontent-W">
                         <h5>2.ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า</h5>    
                         <iframe src="https://drive.google.com/file/d/1N3zOHlnLhtzIgVdhq3zyQ2b5yy2ufdM_/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1122,7 +1122,7 @@
                     <div class="gamecontent-W">
                         <h5>3.ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก</h5>    
                         <iframe src="https://drive.google.com/file/d/1rclt2KWfTh_wlSVz5aCkdQIEVveSjzER/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1140,7 +1140,7 @@
                     <div class="gamecontent-W">
                         <h5>4.ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI)</h5>    
                         <iframe src="https://drive.google.com/file/d/1OXdpUDA4A5wK7Y6NJpGx5Amx8v-ieEeX/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1158,7 +1158,7 @@
                     <div class="gamecontent-W">
                         <h5>5.ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน</h5>    
                         <iframe src="https://drive.google.com/file/d/1NydlFWaNi6JqLbukI-2_BOpGKTuJRbVQ/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1176,7 +1176,7 @@
                     <div class="gamecontent-W">
                         <h5>6.ให้เขียนโปรแกรมแนะนำตัวเอง</h5>    
                         <iframe src="https://drive.google.com/file/d/14hJ_KnUSpBlys--trP_EkFelvtfdKiPw/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1194,7 +1194,7 @@
                     <div class="gamecontent-W">
                         <h5>7.ให้เขียนโปรแกรมแสดงข้อมูลชื่อ นามสกุล อายุ และส่วนสูง</h5>    
                         <iframe src="https://drive.google.com/file/d/1yWAHdlJa3NUEXct3LNRFjEz8XUFZIDXN/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1212,7 +1212,7 @@
                     <div class="gamecontent-W">
                         <h5>8.ให้เขียนโปรแกรมแสดงข้อมูลชื่อ นามสกุล อายุ ส่วนสูง และงานอดิเรก</h5>
                         <iframe src="https://drive.google.com/file/d/1oqMa68Cv4zJYohxVTi8_DVqaNCxBggxN/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1231,7 +1231,7 @@
                     <div class="gamecontent-W">
                         <h5>9.ให้เขียนโปรแกรมแสดงข้อมูลช่องทางติดต่อ</h5>    
                         <iframe src="https://drive.google.com/file/d/1CGfw9qkwd_HKILpMeJyDzXIKpCQZfpXC/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1249,7 +1249,7 @@
                     <div class="gamecontent-W">
                         <h5>10.ให้เขียนโปรแกรมแสดงข้อมูลการศึกษาสูงสุด</h5>   
                         <iframe src="https://drive.google.com/file/d/17ws3NNddvNo9Z_ayKAPLbMzWi6Lp44uQ/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
