--- a/views/teacher/TeacherCourse/4_Operators_and_Expressions-course.ejs
+++ b/views/teacher/TeacherCourse/4_Operators_and_Expressions-course.ejs
@@ -1007,7 +1007,7 @@
                     <div class="gamecontent-W">
                         <h5>1.ให้เขียนโปรแกรมคำนวณโดยใช้ Arithmetic Operators</h5>    
                         <iframe src="https://drive.google.com/file/d/1paJ6fajACtcU8nDFjnIzL7dN-_0Af7Qr/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div> 
                 <div class="game">
@@ -1025,7 +1025,7 @@
                     <div class="gamecontent-W">
                         <h5>2.ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Relational Operators</h5>
                         <iframe src="https://drive.google.com/file/d/1avgE9dzsgDoCFJPB7MTJYP41H-5QeUTS/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1043,7 +1043,7 @@
                     <div class="gamecontent-W">
                         <h5>3.ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Increment และ Decrement Operators</h5>    
                         <iframe src="https://drive.google.com/file/d/1LUur7C0PFlRFAIcyCHdpz622b2fgUS-h/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1061,7 +1061,7 @@
                     <div class="gamecontent-W">
                         <h5>4.ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Assignment Operators</h5>    
                             <iframe src="https://drive.google.com/file/d/1j-yErRhFEK-ngHTOmk9C0nt3zWAHUCbq/preview" width="500" height="500" allow="autoplay"></iframe>
-                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
+                            <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%%" height="500px"></iframe>  
                         </div>
                 </div>
                 <div class="game">   
@@ -1079,7 +1079,7 @@
                     <div class="gamecontent-W">
                     <h5>5.ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Logical Operators</h5>    
                         <iframe src="https://drive.google.com/file/d/1N00PU_A3v7hC6fAAAiuWU6KLU4kEaTe5/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1097,7 +1097,7 @@
                     <div class="gamecontent-W">
                         <h5>6.ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Ternary Operators (Conditional Operators)</h5>    
                         <iframe src="https://drive.google.com/file/d/1TWdafw8mKq4XGVC260VupmQaUIZGIwL8/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1116,7 +1116,7 @@
                     <div class="gamecontent-W">
                         <h5>7.ให้เขียนโปรแกรมตรวจสอบและแสดงผลของตัวเลขจำนวนเต็ม</h5>    
                         <iframe src="https://drive.google.com/file/d/18TJQs-oPlYLLTheWSfxoj2eIjICKWbCt/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1136,7 +1136,7 @@
                     <div class="gamecontent-W">
                         <h5>8.ให้เขียนโปรแกรมแสดงผลลัพธ์โดยใช้ Bitwise Operators</h5>    
                         <iframe src="https://drive.google.com/file/d/1a028--DAmG27iho4J3gg3CokJ7QlL6dK/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1154,7 +1154,7 @@
                     <div class="gamecontent-W">
                         <h5>9.ให้เขียนโปรแกรมคำนวณ Polynomial Expression</h5>    
                         <iframe src="https://drive.google.com/file/d/1wpBlvrL7-D0NG3cLfS4FZc-k04yEwhpJ/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1172,7 +1172,7 @@
                     <div class="gamecontent-W">
                         <h5>10.ให้เขียนโปรแกรมคำนวณส่วนลดและแสดงราคาของสินค้า</h5>    
                         <iframe src="https://drive.google.com/file/d/1LBMrVIPBVEdT52EcaEdBToVyWqIkJmXh/preview" width="500" height="500" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
