--- a/views/teacher/TeacherCourse/6_Loop_Statements-course.ejs
+++ b/views/teacher/TeacherCourse/6_Loop_Statements-course.ejs
@@ -1112,7 +1112,7 @@
                             <div class="gamecontent-W">
                                 <h5>1. ให้เขียนโปรแกรมตารางสูตรคูณ</h5>
                                 <iframe src="https://drive.google.com/file/d/1Sny_oIr9xL6ejPt_d8WomBcL7lnJb56t/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1130,7 +1130,7 @@
                             <div class="gamecontent-W">
                                 <h5>2. ให้เขียนโปรแกรมหาเลขคู่</h5>
                                 <iframe src="https://drive.google.com/file/d/1NxReX7sQjiKnrvAF4EEoLhTWAcm3Ag5Z/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1148,7 +1148,7 @@
                             <div class="gamecontent-W">
                                 <h5>3. ให้เขียนโปรแกรมหาเลขคู่และเลขคี่</h5>
                                 <iframe src="https://drive.google.com/file/d/1r4wS1MWR6icEObZte6-AcEM3xtBwQUdi/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1166,7 +1166,7 @@
                             <div class="gamecontent-W">
                                 <h5>4. ให้เขียนโปรแกรมแสดงจำนวนตัวเลขตามที่กำหนด</h5>
                                 <iframe src="https://drive.google.com/file/d/1vscsnwdcPmw2rNeq9NC2DYtBTqmCtFG9/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1184,7 +1184,7 @@
                             <div class="gamecontent-W">
                                 <h5>5. ให้เขียนโปรแกรมหาค่าเฉลี่ย</h5>
                                 <iframe src="https://drive.google.com/file/d/13aQGqhR4Ka5FCbw3ZZqKU9W50Q7qRUpR/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1202,7 +1202,7 @@
                             <div class="gamecontent-W">
                                 <h5>6. ให้เขียนโปรแกรมสร้างเมนูเลือกแสดงข้อความ</h5>
                                 <iframe src="https://drive.google.com/file/d/1C2Lun2vTxMg-o3MCmKnuHotnP3mXoL0u/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1220,7 +1220,7 @@
                             <div class="gamecontent-W">
                                 <h5>7. ให้เขียนโปรแกรมเมนูเลือกคำนวณพื้นที่</h5>
                                 <iframe src="https://drive.google.com/file/d/1lisiPOE_jbuLhTRZQeQ7Ewld1E-PljfE/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1238,7 +1238,7 @@
                             <div class="gamecontent-W">
                                 <h5>8. ให้เขียนโปรแกรมแสดงคะแนนและเกรด</h5>
                                 <iframe src="https://drive.google.com/file/d/1ZEfW00mczvvzBoT0eM8j5LDj4GlaMQmH/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1256,7 +1256,7 @@
                             <div class="gamecontent-W">
                                 <h5>9. ให้เขียนโปรแกรมเลือกเมนูคำนวณผลบวกและผลคูณ</h5>
                                 <iframe src="https://drive.google.com/file/d/1iN3mWXoW95y5Ph20yzDhyRAeyFrlL8Rl/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
@@ -1274,7 +1274,7 @@
                             <div class="gamecontent-W">
                                 <h5>10. ให้เขียนโปรแกรมคำนวณผลรวมของตัวเลขที่เป็นเลขคู่</h5>
                                 <iframe src="https://drive.google.com/file/d/1SdNnpAgdCPXN010h7kT1o37TbNsFGTFN/preview" width="500" height="500" allow="autoplay"></iframe>
-                                <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                                <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                             </div>
                         </div>
                         <div class="game">
