--- a/views/teacher/TeacherCourse/7_Arrays_and_Strings-course.ejs
+++ b/views/teacher/TeacherCourse/7_Arrays_and_Strings-course.ejs
@@ -919,7 +919,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">1. ให้เขียนโปรแกรมรับคะแนนนักเรียน 5 คน แล้วหาค่าเฉลี่ย </h5>
                         <iframe src="https://drive.google.com/file/d/1wVY9u-I_Ngc3m7JRO1RiuI49h5wKe5re/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -936,7 +936,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">2. ให้เขียนโปรแกรมรับคะแนนนักเรียน 3 คน สอบ 2 วิชา แล้วหาค่าเฉลี่ยแต่ละคน</h5>
                         <iframe src="https://drive.google.com/file/d/1Bbf_Qz9IbM_zg2ZT01yoWPY1jCzvkmMX/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -953,7 +953,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">3. ให้เขียนโปรแกรมรับคะแนนนักเรียน 2 ห้อง ห้องละ 3 คน คนละ 2 วิชา</h5>
                         <iframe src="https://drive.google.com/file/d/1KSy6KicgsmobBq6RiPVpQ4uoCtqwk2rP/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -970,7 +970,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">4. ให้เขียนโปรแกรมหาค่าสูงสุด ต่ำสุด และค่าเฉลี่ยใน Array 1 มิติ</h5>
                         <iframe src="https://drive.google.com/file/d/12z5f0BApIa1DXqceUhxOIyzfXe4Zop3j/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -987,7 +987,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">5. ให้เขียนโปรแกรมหาผลรวมของแถวและหลักในเมทริกซ์</h5>
                         <iframe src="https://drive.google.com/file/d/15Fz-MNMNPqwVZH93Z3pADa9aC7FJppLv/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1004,7 +1004,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">6. ให้เขียนโปรแกรมเก็บและแสดงคะแนนสอบของนักเรียนหลายห้องในหลายวิชา</h5>
                         <iframe src="https://drive.google.com/file/d/1_pTzMx0s_F07SKd9CEBJ76AIoAl1jTFi/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1022,7 +1022,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">7. ให้เขียนโปรแกรมจัดเรียงรายชื่อนักเรียนพร้อมคะแนน</h5>
                         <iframe src="https://drive.google.com/file/d/10LuDZ-Sa2FT8YV55LoI01dGU7kXue-Zi/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1040,7 +1040,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">8. ให้โปรแกรมตรวจสอบความยาวและทำตัวพิมพ์ใหญ่</h5>
                         <iframe src="https://drive.google.com/file/d/1h4tn5mjXEhtVjHmiy2XRhxLEybr6OLIu/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1057,7 +1057,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">9. ให้เขียนโปรแกรมเปรียบเทียบและต่อ string</h5>
                         <iframe src="https://drive.google.com/file/d/1Gi3ZBDyptxT5N7kFSgdxoJsrKbDoOmR1/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
@@ -1075,7 +1075,7 @@
                     <div class="gamecontent-W">
                         <h5 style="text-align: left;">10. ให้เขียนโปรแกรมรวมชื่อและนามสกุลแล้วแปลงเป็นตัวพิมพ์ใหญ่</h5>
                         <iframe src="https://drive.google.com/file/d/1UGcGN5lW5A7Uy3MpFnz1qF4eizzCk8VW/preview" width="500" height="500" allow="autoplay"></iframe>                    
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="50%" height="500px"></iframe>  
                     </div>
                 </div>
                 <div class="game">
