update Teacher lab embed

--- a/views/teacher/TeacherProject/2_Datatype_and_Variable-lab.ejs
+++ b/views/teacher/TeacherProject/2_Datatype_and_Variable-lab.ejs
@@ -547,7 +547,7 @@
                     </p>    
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/15JtyzFIcjkP-t5ioDrPaece38SmBv4No/preview" width="100%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -573,7 +573,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1osQnRL5Jqkc4xR3FHW5vw17JXqgGcfAW/preview" width="100%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe> 
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
@@ -599,7 +599,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1KUivgO6uXy1YT9iw0aNTGeDNyEiz_CPT/preview" width="100%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe> 
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe> 
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
@@ -625,7 +625,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1A4vDFT5BVSgZhqcdNHrdJXWvsFdA7fau/preview" width="100%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
@@ -652,7 +652,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1CnAqlO3WcbvGuckORcpOyhaWT_vQdgR9/preview" width="100%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
