--- a/views/teacher/TeacherProject/7_Arrays_and_Strings-lab.ejs
+++ b/views/teacher/TeacherProject/7_Arrays_and_Strings-lab.ejs
@@ -549,7 +549,7 @@
                         <br></p>
                     <div class="group2"  style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/106i_3KSzGnwtZUVPp_lhIX5tQwsAU-kI/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -577,7 +577,7 @@
                         <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1KQx37p5_hPIWOOtGFgU04Q7pwBgIdH8v/preview" width="90%" height="600" allow="autoplay"></iframe>                
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
@@ -606,7 +606,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/169yfDhNWYSPaQ_d2UO_gb7VmnPgBSMRU/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                         <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
@@ -635,7 +635,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1Y7SgRDpi4nzbDUh2YKy3hvpWVS5atL7y/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
@@ -667,7 +667,7 @@
                         <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1AEd55yhom5bJ3rH10LmUsywpydUd_5Ho/preview" width="90%" height="600" allow="autoplay"></iframe> 
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
