--- a/views/teacher/TeacherProject/5_Selection_Statements-lab.ejs
+++ b/views/teacher/TeacherProject/5_Selection_Statements-lab.ejs
@@ -621,7 +621,7 @@
                     <br></p>
                     <div class="group2"  style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1TzxSd-3BQJWSP3_mhcOfkbZ6upXz4miL/preview " width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -649,7 +649,7 @@
                     <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1vLX8I5lnKCB3Mhiw13mkPFTJFO4A7YjJ/preview" width="90%" height="600" allow="autoplay"></iframe>                
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
@@ -676,7 +676,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1pQr8wLNTTtauCa83cvg7bhRDn2zrA572/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                         <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
@@ -704,7 +704,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/16881Ni6lSdoS2gU3dH3EUKYBvPEs4uHn/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control" laceholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
@@ -731,7 +731,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1Rp1Lh2rVBOTnu9G0YwzlnaApwg9mu5yZ/preview" width="90%" height="600" allow="autoplay"></iframe> 
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
