--- a/views/teacher/TeacherProject/6_Loop_Statements-lab.ejs
+++ b/views/teacher/TeacherProject/6_Loop_Statements-lab.ejs
@@ -547,7 +547,7 @@
                         <br></p>
                     <div class="group2"  style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1NCFVwnLT9L4WsbNvJUipqavLCad1zx8v/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -575,7 +575,7 @@
                     <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1X6IaInO0TTEDlarsfj-gCaptJIluu3_X/preview" width="90%" height="600" allow="autoplay"></iframe>                
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
@@ -603,7 +603,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1bIYtpUKh3pY2FphsoVlpUguKvZiT2pUo/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                         <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
@@ -634,7 +634,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1g8Y5MN3Oc5CZ8bw1klvBXM_Vlnfra-sn/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
@@ -661,7 +661,7 @@
                         <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1a8y56ondTbiB1PyJec7fVR0ylyGIhJTe/preview" width="90%" height="600" allow="autoplay"></iframe> 
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
