--- a/views/teacher/TeacherProject/8_Functions-lab.ejs
+++ b/views/teacher/TeacherProject/8_Functions-lab.ejs
@@ -583,7 +583,7 @@
                         <br></p>
                     <div class="group2"  style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/16qnugYivUXITQABtI-eLxPg-d2aUVbxQ/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
@@ -612,7 +612,7 @@
                         <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1xBF-R-DvRfEAShDKDHEX1WwL2V0qZLZ4/preview" width="90%" height="600" allow="autoplay"></iframe>                
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink171" required></textarea>
@@ -642,7 +642,7 @@
                     </p>
                     <div class="group2 style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/13KE2sEWwAhD4jLIZe7gldnO8pfuTcul5/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                         <div class="form-group">
                         <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink181" required></textarea>
@@ -671,7 +671,7 @@
                     </p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/13JetzntboDhLFO2_miY0XzF2j0yE4y8A/preview" width="90%" height="600" allow="autoplay"></iframe>
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>    
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink191" required></textarea>
@@ -699,7 +699,7 @@
                         <br></p>
                     <div class="group2" style="margin: 20px;">
                         <iframe src="https://drive.google.com/file/d/1sTSsirPajSIMxj3dfaJEfWG1wyu7wzNQ/preview" width="90%" height="600" allow="autoplay"></iframe> 
-                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                        <iframe src="https://www.scaler.com/topics/c/online-c-compiler/" width="100%" height="600px"></iframe>  
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="sendLink201" required></textarea>
